Integrate Scene Outliner and Inspector into WorkspaceWindow
Co-authored-by: AndreasNilsson123 <83422758+AndreasNilsson123@users.noreply.github.com>